...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Path Of Lowest Cost" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ysc-Bo-jEE">
                                <rect key="frame" x="81" y="3" width="213" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="ti6-00-o90"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="23"/>
                                <color key="textColor" red="0.47775849069999998" green="0.74072697080000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                                <rect key="frame" x="132" y="169" width="110" height="36"/>
                                <color key="backgroundColor" red="0.47775849069999998" green="0.74072697080000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="110" id="lBc-KQ-vzJ"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="20"/>
                                <state key="normal" title="Enter">
                                    <color key="titleColor" red="0.1334315727" green="0.16952853849999999" blue="0.76523042929999996" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="enterData:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6Wb-eN-TT6"/>
                                </connections>
                            </button>
...
                                <rect key="frame" x="32" y="480" width="311" height="33"/>
                                <color key="backgroundColor" red="0.47775849069999998" green="0.74072697080000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="311" id="JfL-Yn-32g"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="GillSans-Bold" family="Gill Sans" pointSize="18"/>
                                <state key="normal" title="Find Path of Lowest Cost">
                                    <color key="titleColor" red="0.1334315727" green="0.16952853849999999" blue="0.76523042929999996" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="findPath:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gbj-3l-gBu"/>
                                </connections>
                            </button>
...
